--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@ html {
     height: 100%;
     margin:0;
     padding:0;
+    width: 100%;
 }
 
 
@@ -19,6 +20,7 @@ body {
     height: 100%;
     margin:0;
     padding:0;
+    width: 100%;
 }
 
 h4, h5, h6,p,ul,li,h2,h3{
@@ -1123,7 +1125,7 @@ h4, h5, h6,p,ul,li,h2,h3{
 }
 
 .registr-item{
-    margin-bottom:15px;
+    margin-bottom:10px;
 }
 
 .registr-label{
@@ -1329,4 +1331,74 @@ h4, h5, h6,p,ul,li,h2,h3{
 .widgets-list-item-inner{
     border-right: 1px solid #cccccc;
 
+}
+
+.wrapper-order-header{
+    padding: 20px 0;
+    border-bottom: 1px solid #d6631d;
+}
+
+.accordionButton{
+    color: white;
+    border-bottom: 1px solid #d6631d;
+    padding: 20px;
+    cursor: pointer;
+}
+.accordionContent{
+    display: none;
+    padding:20px;
+}
+
+.header-color{
+    color: #484848;
+}
+
+.mini1{
+    display: none;
+}
+
+#prompt-form {
+    display: inline-block;
+    padding: 15px;
+    width: 400px;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    background: white;
+    vertical-align: middle;
+}
+
+#prompt-form-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    display: none;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+
+#prompt-form-container:before {
+    display: inline-block;
+    height: 100%;
+    content: '';
+    vertical-align: middle;
+}
+
+#cover-div {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9000;
+    width: 100%;
+    height: 100%;
+    background-color: gray;
+    opacity: 0.3;
+    filter: alpha(opacity=30);
+}
+
+#prompt-form input[name="text"] {
+    display: block;
+    margin: 5px;
+    width: 180px;
 }
