--- a/styles/style.css
+++ b/styles/style.css
@@ -483,7 +483,7 @@ h4, h5, h6,p,ul,li,h2,h3{
 
 .widgets-wrap{
     background: linear-gradient(to bottom, #f3f3f3, #e5e5e5);
-    margin:10px 0;
+    margin:0;
 }
 
 .header-white{
